package sia;

interface DisplayObserver {
    void display();
}
