package sia;

import java.util.ArrayList;
import java.util.List;

public abstract class Subject {

    private List<Observer> observers = new ArrayList<>();

    public void addObserver(Observer observer) {
        observers.add(observer);
    }

    public void removeObserver(Observer observer) {
        observers.remove(observer);
    }

    public void notifyObservers(float temperature, float humidity, float pressure) {
        for (Observer observer : observers) {
            observer.update(temperature, humidity, pressure);
        }
    }

}
